--- a/src/styles/post.less
+++ b/src/styles/post.less
@@ -1,18 +1,18 @@
 .post {
   h1 {
-    @apply mt-12 mb-5 font-bold text-4xl;
+    @apply mt-10 mb-5 font-bold text-4xl;
   }
   h2 {
-    @apply mt-10 mb-4 font-bold text-3xl;
+    @apply mt-9 mb-4 font-bold text-3xl;
   }
   h3 {
-    @apply mt-9 mb-4 font-bold text-2xl;
+    @apply mt-8 mb-4 font-bold text-2xl;
   }
   h4 {
-    @apply mt-8 mb-3 font-bold text-xl;
+    @apply mt-7 mb-3 font-bold text-xl;
   }
   h5 {
-    @apply mt-7 mb-2 font-bold text-base;
+    @apply mt-6 mb-2 font-bold text-base;
   }
   h6 {
     @apply mt-5 mb-1 text-sm;
@@ -36,5 +36,14 @@
   img {
     max-width: 100%;
     cursor: pointer;
+  }
+}
+
+.ant-drawer {
+  .ant-tree-switcher {
+    width: unset;
+  }
+  .ant-tree-indent-unit {
+    width: 12px;
   }
 }
